--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -1,28 +1,25 @@
-.container {
-    margin: 0 auto;
-    max-width: 1200px;
-    padding: 50px 20px;
-  }
-  
-  .image {
-    width: 100%;
-  }
-  
-  .textContainer {
+.contactus {
     display: flex;
-    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    padding: 50px;
+    margin: 50px 0;
   }
   
-  .heading {
-    font-size: 32px;
-    font-weight: bold;
-    margin-bottom: 20px;
+  .about-text {
+    background-color: #f8f8f8;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
   }
   
-  .text {
-    font-size: 18px;
-    line-height: 1.5;
-    margin-bottom: 20px;
+  @media only screen and (max-width: 768px) {
+    .contactus {
+      flex-direction: column;
+    }
+  
+    .col-md-6 {
+      margin-bottom: 20px;
+    }
   }
   
